[tool.poetry]
name = "nlp_topic_modeling"
version = "0.1.0"
description = "Testing topic modeling techniques"
authors = ["ksopyla"]
license = "Mit"

[tool.poetry.dependencies]
python = "^3.9"
bertopic = "^0.11.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
